fix: Accessibility issues in color contrast and focusable elements

--- a/src/components/App/colors.css
+++ b/src/components/App/colors.css
@@ -3,7 +3,9 @@
    * Colors
    */
   --color-a: #0f668e;
+  --color-b-contrast: #217CA6;
   --color-b: #1f94ca;
+  --color-c-contrast: #077EB5;
   --color-c: #35b0e8;
   --color-d: #a8e0fb;
   --color-e: #f5fcff;
